<resources>
    <string name="app_name">AttendanceApp</string>
    <string name="title_activity_student">Student_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_teachers">Teachers_Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_student">Add Student</string>
    <string name="student_name">Student Name</string>
    <string name="student_id">Student Id</string>
    <string name="student_phone">Student Phone</string>
    <string name="student_address">Student Address</string>
    <string name="set_student_password">Set student Password</string>
    <string name="submit">Submit</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="password">Password</string>
    <string name="student">Student</string>
    <string name="teacherName">Teacher Name</string>
    <string name="teacherIndex">Teacher Index</string>
    <string name="teacherPhone">Teacher Phone</string>
    <string name="teacherEmail">Teacher Email</string>
    <string name="teacherSetPassword">Teacher Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_class">Add Class</string>
    <string name="class_name">Class Name</string>
    <string name="male_student">Male Student</string>
    <string name="female_student">Female Student</string>
    <string name="total_student">Total Student</string>
    <string name="admin_login">Admin Login</string>
    <string name="teacher">Teacher</string>
    <string name="student_roll">Student Roll</string>
    <string name="teacher_s_list">Teachers List</string>
    <string name="student_Class">Class Name</string>
    <string name="student_section">Section</string>
    <string name="student_List">Students List</string>
</resources>