<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".AdminSignUp">

    <TextView
        android:text="@string/sign_up"
        android:textSize="70sp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/emailSignUpAdmin"
        android:hint="@string/enter_email"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/passwordSignUpAdmin"
        android:hint="@string/create_password"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/confirmPasswordSignUpAdmin"
        android:hint="@string/confirm_password"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/submitSignUpAdmin"
        android:text="@string/submit"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>