<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/teacherLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teacher"
            android:textAllCaps="false"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/studentLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goAllStudentActivity"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:text="@string/student"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/admin_login"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/adminEmailEt"
            android:hint="Email"
            android:layout_margin="10dp"
            android:ems="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/adminPasswordEt"
            android:hint="@string/password"
            android:ems="15"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/submitAdminLoginBtn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="goAdminActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/adminSignUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="goAdminSignUp"
            android:textColor="@color/teal_200"/>

    </LinearLayout>
</LinearLayout>