<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="7"
    tools:ignore="MissingClass">
    <CheckBox
        android:id="@+id/studentCheckBox"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/studentRollTv"
        android:text="@string/student_roll"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/studentNameTv"
        android:text="@string/student_name"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/studentClassTv"
        android:text="@string/student_Class"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</LinearLayout>