<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllStudentActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:text="@string/student_List"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_margin="30dp"
        android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/submitPresentStudent"
            android:text="@string/submit"
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/studentPresentCB"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/studentRollTv"
            android:text="@string/student_roll"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:textColor="@color/green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/studentNameTv"
            android:text="@string/student_name"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:textColor="@color/green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/studentClassTv"
            android:text="@string/student_Class"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:textColor="@color/green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    </LinearLayout>

</LinearLayout>